--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+results/
+.vscode/
+
 # Byte-compiled / optimized / DLL files
+.DS_store
 __pycache__/
 *.py[cod]
 *$py.class
@@ -6,8 +10,15 @@ __pycache__/
 # C extensions
 *.so
 
+*\#
+
+# model files
+*.h5
+
 # Distribution / packaging
 .Python
+_MNIST_/
+tmp/
 build/
 develop-eggs/
 dist/
@@ -45,7 +56,6 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
@@ -53,8 +63,9 @@ coverage.xml
 
 # Django stuff:
 *.log
+.static_storage/
+.media/
 local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
@@ -102,3 +113,261 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+*.pyc
+
+# Jetbrains
+.idea
+
+.DS_Store
+
+*.pid
+
+tempOutput/results/
+.vscode/
+
+# Byte-compiled / optimized / DLL files
+.DS_store
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+*\#
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+qsar_software/
+.eggs/
+EPIsuite/
+history/
+EPIsuite/
+history/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+.static_storage/
+.media/
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+*.pyc
+
+# Jetbrains
+.idea
+
+.DS_Store
+
+*.pid
+
+tempOutput/results/
+.vscode/
+
+# Byte-compiled / optimized / DLL files
+.DS_store
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+*\#
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+qsar_software/
+.eggs/
+EPIsuite/
+history/
+EPIsuite/
+history/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+.static_storage/
+.media/
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+*.pyc
+
+# Jetbrains
+.idea
+
+.DS_Store
+
+*.pid
+
+tempOutput/
