wrapped-up services in Docker

--- a/src/uwsgi.ini
+++ b/src/uwsgi.ini
@@ -4,7 +4,7 @@ master = true
 processes = 4
 threads = 2
 enable-threads = True
-http = 127.0.0.1:3031
+http-socket = :$(PORT) 
 die-on-term = true
 socket = /tmp/uwsgi.sock
 uid=foo
