--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,32 @@
 absl-py==0.2.2
+appnope==0.1.0
+asn1crypto==0.24.0
 astor==0.6.2
+aws==0.2.5
+awscli==1.15.38
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
 backports.weakref==1.0.post1
+bcdoc==0.12.2
+bcrypt==3.1.4
 bleach==1.5.0
+boto==2.48.0
+boto3==1.7.38
+botocore==1.10.38
 certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
 click==6.7
+colorama==0.2.5
+cryptography==2.2.2
+cycler==0.10.0
+decorator==4.3.0
+Django==1.11.13
+docutils==0.14
 enum34==1.1.6
+envparse==0.2.0
+fabric==2.1.3
 Flask==1.0.2
 funcsigs==1.0.2
 futures==3.2.0
@@ -12,24 +34,63 @@ gast==0.2.0
 grpcio==1.12.1
 h5py==2.8.0
 html5lib==0.9999999
-imread==0.6.1
+idna==2.7
+image==1.5.24
+invoke==1.0.0
+ipaddress==1.0.22
+ipykernel==4.8.2
+ipython==5.7.0
+ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.10
+jmespath==0.9.3
+jupyter-client==5.2.3
+jupyter-core==4.4.0
 Keras==2.2.0
 Keras-Applications==1.0.2
 Keras-Preprocessing==1.0.1
+kiwisolver==1.0.1
 Markdown==2.6.11
 MarkupSafe==1.0
+matplotlib==2.2.2
 mock==2.0.0
 numpy==1.14.4
+paramiko==2.4.1
+pathlib2==2.3.2
 pbr==4.0.4
+pexpect==4.6.0
+pickleshare==0.7.4
 Pillow==5.1.0
+prettytable==0.7.2
+prompt-toolkit==1.0.15
 protobuf==3.5.2.post1
+ptyprocess==0.5.2
+pyasn1==0.4.3
+pycparser==2.18
+Pygments==2.2.0
+PyNaCl==1.2.1
+pyparsing==2.2.0
+python-dateutil==2.7.3
+pytz==2018.4
 PyYAML==3.12
+pyzmq==17.0.0
+redis==2.10.6
+requests==2.19.0
+rq==0.11.0
+rsa==3.1.2
+s3transfer==0.1.13
+scandir==1.7
 scipy==1.1.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.11.0
+subprocess32==3.5.1
 tensorboard==1.8.0
 tensorflow==1.8.0
 termcolor==1.1.0
+tornado==5.0.2
+traitlets==4.3.2
+urllib3==1.23
 uWSGI==2.0.17
+wcwidth==0.1.7
 Werkzeug==0.14.1
