--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ results/
 .vscode/
 
 app/models/SentimentV1/uncased_L-12_H-768_A-12/
+app/models/SentimentV1/outputs/
 *.zip
 
 # Byte-compiled / optimized / DLL files
