--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -47,7 +47,7 @@ Jinja2==2.10
 jmespath==0.9.3
 jupyter-client==5.2.3
 jupyter-core==4.4.0
-Keras==1.2.2
+Keras==2.0.0
 Keras-Applications==1.0.2
 Keras-Preprocessing==1.0.1
 kiwisolver==1.0.1
@@ -64,7 +64,7 @@ pickleshare==0.7.4
 Pillow==5.1.0
 prettytable==0.7.2
 prompt-toolkit==1.0.15
-protobuf==3.5.2.post1
+protobuf==3.6.0
 ptyprocess==0.5.2
 pyasn1==0.4.3
 pycparser==2.18
