--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,11 +1,11 @@
-FROM tensorflow/tensorflow:latest-gpu
+FROM continuumio/miniconda:4.4.10
 
 # utils
 RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
 
-#RUN conda install gxx_linux-64
+RUN conda install gxx_linux-64
 
-#RUN apt-get install -y --force-yes default-libmysqlclient-dev mysql-client build-essential
+RUN apt-get install -y --force-yes default-libmysqlclient-dev mysql-client build-essential
 
 # Grab requirements.txt.
 COPY requirements.txt /tmp/requirements.txt
