--- a/src/Dockerfile-sentiment
+++ b/src/Dockerfile-sentiment
@@ -1,13 +1,12 @@
-FROM tensorflow/tensorflow:latest-gpu
+FROM continuumio/miniconda:4.4.10
 
 # utils
 RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
 
-#RUN conda install gxx_linux-64
+RUN conda install gxx_linux-64
 
-#RUN conda install python=3.6
 
-#RUN apt-get install -y --force-yes default-libmysqlclient-dev mysql-client build-essential
+RUN apt-get install -y --force-yes default-libmysqlclient-dev mysql-client build-essential
 
 # Grab requirements.txt.
 COPY requirementssenti.txt /tmp/requirementssenti.txt
